--- a/website/Templates/index.html
+++ b/website/Templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home | Smart Network Controller System</title>
@@ -8,23 +9,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
     <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
     <!-- Font Awesome CSS-->
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}">
     <!-- Fontastic Custom icon font-->
-    <link rel="stylesheet" href="css/fontastic.css">
+    <link rel="stylesheet" href="{% static 'css/fontastic.css' %}">
     <!-- Google fonts - Roboto -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <!-- jQuery Circle-->
-    <link rel="stylesheet" href="static/css/grasp_mobile_progress_circle-1.0.0.min.css">
+    <link rel="stylesheet" href="{% static 'css/grasp_mobile_progress_circle-1.0.0.min.css' %}">
     <!-- Custom Scrollbar-->
-    <link rel="stylesheet" href="vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
+    <link rel="stylesheet" href="{% static 'vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css' %}">
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="static/css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="static/css/custom.css">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="static/img/logo.png">
+    <link rel="shortcut icon" href="{% static 'img/logo.png' %}">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -36,7 +37,7 @@
         <!-- Sidebar Header    -->
         <div class="sidenav-header d-flex align-items-center justify-content-center">
           <!-- User Info-->
-          <div class="sidenav-header-inner text-center"><img src="img/logo.png" alt="logo" class="img-fluid rounded-circle">
+          <div class="sidenav-header-inner text-center"><img src="{% static 'img/logo.png' %}" alt="logo" class="img-fluid rounded-circle">
             <h2 class="h5">AIT</h2>
           </div>
           <!-- Small Brand information, appears on minimized sidebar-->
@@ -189,8 +190,8 @@
                     <label for="list-8">Rack 8 : IP Address 192.168.1.9</label>
                   </li>
                 </ul>-->
-                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
-                <li><a href="charts.html">Rack 2 : IP Address 192.168.1.3</a></li>
+                <li><a href="charts.html">{{var1}}</a></li>
+                <!--<li><a href="charts.html">Rack 2 : IP Address 192.168.1.3</a></li>
                 <li><a href="charts.html">Rack 3 : IP Address 192.168.1.4</a></li>
                 <li><a href="charts.html">Rack 4 : IP Address 192.168.1.5</a></li>
                 <li><a href="charts.html">Rack 5 : IP Address 192.168.1.6</a></li>
@@ -201,7 +202,7 @@
                 <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
                 <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
                 <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
-                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
+                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>-->
 
               </div>
             </div>
