--- a/website/Templates/commandLine.html
+++ b/website/Templates/commandLine.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 {% extends 'base_template.html' %}
 
+    {% block active2 %}
+        active
+    {% endblock %}
     {% block content %}
     <!-- Breadcrumb-->
       <div class="breadcrumb-holder">
