--- a/website/Templates/index.html
+++ b/website/Templates/index.html
@@ -1,114 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    {% load static %}
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home | Smart Network Controller System</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
-    <!-- Font Awesome CSS-->
-    <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}">
-    <!-- Fontastic Custom icon font-->
-    <link rel="stylesheet" href="{% static 'css/fontastic.css' %}">
-    <!-- Google fonts - Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-    <!-- jQuery Circle-->
-    <link rel="stylesheet" href="{% static 'css/grasp_mobile_progress_circle-1.0.0.min.css' %}">
-    <!-- Custom Scrollbar-->
-    <link rel="stylesheet" href="{% static 'vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css' %}">
-    <!-- theme stylesheet-->
-    <link rel="stylesheet" href="{% static 'css/style.default.css' %}" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="{% static 'img/logo.png' %}">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  <body>
-    <!-- Side Navbar -->
-    <nav class="side-navbar">
-      <div class="side-navbar-wrapper">
-        <!-- Sidebar Header    -->
-        <div class="sidenav-header d-flex align-items-center justify-content-center">
-          <!-- User Info-->
-          <div class="sidenav-header-inner text-center"><img src="{% static 'img/logo.png' %}" alt="logo" class="img-fluid rounded-circle">
-            <h2 class="h5">AIT</h2>
-          </div>
-          <!-- Small Brand information, appears on minimized sidebar-->
-          <div class="sidenav-header-logo"><a href="index.html" class="brand-small text-center"> <strong>A</strong><strong class="text-primary">IT</strong></a></div>
-        </div>
-        <!-- Sidebar Navigation Menus-->
-        <div class="main-menu">
-          <h5 class="sidenav-heading">Main</h5>
-          <ul id="side-main-menu" class="side-menu list-unstyled">                  
-            <li class="active"><a href="index.html"> <i class="icon-home"></i>Home</a></li>
-            <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Management</a>
-              <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-                <li><a href="forms.html"> <i class="icon-form"></i>Forms</a></li>
-              </ul>
-            </li>
-            <li><a href="charts.html"> <i class="fa fa-bar-chart"></i>Charts</a></li>
-            <li><a href="tables.html"> <i class="icon-grid"></i>Tables</a></li>
-            <li><a href="login.html"> <i class="icon-interface-windows"></i>Login page</a></li>
-            <li><a href="register.html"> <i class="icon-padnote"></i>Register page</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="page">
-      <!-- navbar right-->
-      <header class="header">
-        <nav class="navbar">
-          <div class="container-fluid">
-            <div class="navbar-holder d-flex align-items-center justify-content-between">
-              <div class="navbar-header"><a id="toggle-btn" href="#" class="menu-btn"><i class="icon-bars"> </i></a><a href="index.html" class="navbar-brand">
-                  <div class="brand-text d-none d-md-inline-block"><span>Smart Network </span><strong class="text-primary"> Controller System</strong></div></a></div>
-              <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-                <!--<li class="nav-item dropdown"> <a id="notifications" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link"><i class="fa fa-bell"></i><span class="badge badge-warning">12</span></a>
-                  <ul aria-labelledby="notifications" class="dropdown-menu">
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-envelope"></i>You have 6 new messages </div>
-                          <div class="notification-time"><small>4 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
-                          <div class="notification-time"><small>4 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-upload"></i>Server Rebooted</div>
-                          <div class="notification-time"><small>4 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item"> 
-                        <div class="notification d-flex justify-content-between">
-                          <div class="notification-content"><i class="fa fa-twitter"></i>You have 2 followers</div>
-                          <div class="notification-time"><small>10 minutes ago</small></div>
-                        </div></a></li>
-                    <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong> <i class="fa fa-bell"></i>view all notifications                                            </strong></a></li>
-                  </ul>
-                </li>-->
-                <li class="nav-item"><a href="login.html" class="nav-link logout">Logout<i class="fa fa-sign-out"></i></a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
-      <!-- Counts Section -->
-      <section class="dashboard-counts section-padding">
+
+{% extends 'base_template.html' %}
+    {% block active %}
+        active
+    {% endblock %}
+    {% block content %}
+    <!-- Counts Section -->
+    <section class="dashboard-counts section-padding">
         <div class="container-fluid">
           <div class="row">
-          	<!-- Blank space-->
-          	<div class="col-xl-2 col-md-4 col-6"></div>
             <!-- Count item widget-->
-            <div class="col-xl-2 col-md-4 col-6">
+            <div class="col-xl-3 col-md-4 col-6">
               <div class="wrapper count-title d-flex">
                 <div class="icon"><i class="icon-user"></i></div>
                 <div class="name"><strong class="text-uppercase">Rack</strong><span>Last 5 days</span>
@@ -117,7 +19,7 @@
               </div>
             </div>
             <!-- Count item widget-->
-            <div class="col-xl-2 col-md-4 col-6">
+            <div class="col-xl-3 col-md-4 col-6">
               <div class="wrapper count-title d-flex">
                 <div class="icon"><i class="icon-padnote"></i></div>
                 <div class="name"><strong class="text-uppercase">All Devices</strong><span>Last 5 days</span>
@@ -126,7 +28,7 @@
               </div>
             </div>
             <!-- Count item widget-->
-            <div class="col-xl-2 col-md-4 col-6">
+            <div class="col-xl-3 col-md-4 col-6">
               <div class="wrapper count-title d-flex">
                 <div class="icon"><i class="icon-check"></i></div>
                 <div class="name"><strong class="text-uppercase">Active</strong><span>Last 2 months</span>
@@ -135,7 +37,7 @@
               </div>
             </div>
             <!-- Count item widget-->
-            <div class="col-xl-2 col-md-4 col-6">
+            <div class="col-xl-3 col-md-4 col-6">
               <div class="wrapper count-title d-flex">
                 <div class="icon"><i class="icon-bill"></i></div>
                 <div class="name"><strong class="text-uppercase">Non-active</strong><span>Last 2 days</span>
@@ -145,71 +47,39 @@
             </div>
           </div>
         </div>
-      </section>
-      <!-- Header Section-->
-      <section class="dashboard-header section-padding">
+    </section>
+    <!-- Header Section-->
+    <section class="dashboard-header section-padding">
         <div class="container-fluid">
           <div class="row d-flex align-items-md-stretch">
-          	<div class="col-xl-3 col-md-6"></div>
+          	<div class="col-xl-2 col-md-6"></div>
           	<!-- To Do List-->
             <div class="col-lg-3 col-md-6">
               <div class="card to-do">
-                <h2 class="display h4">RACK</h2>
-                <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
-                <!--<ul class="check-lists list-unstyled">
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-1" name="list-1" class="form-control-custom">
-                    <label for="list-1">Rack 1 : IP Address 192.168.1.2</label>
-                  </li>
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-2" name="list-2" class="form-control-custom">
-                    <label for="list-2">Rack 2 : IP Address 192.168.1.3</label>
-                  </li>
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-3" name="list-3" class="form-control-custom">
-                    <label for="list-3">Rack 3 : IP Address 192.168.1.4</label>
-                  </li>
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-4" name="list-4" class="form-control-custom">
-                    <label for="list-4">Rack 4 : IP Address 192.168.1.5</label>
-                  </li>
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-5" name="list-5" class="form-control-custom">
-                    <label for="list-5">Rack 5 : IP Address 192.168.1.6</label>
-                  </li>
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-6" name="list-6" class="form-control-custom">
-                    <label for="list-6">Rack 6 : IP Address 192.168.1.7</label>
-                  </li>
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-7" name="list-7" class="form-control-custom">
-                    <label for="list-7">Rack 7 : IP Address 192.168.1.8</label>
-                  </li>
-                  <li class="d-flex align-items-center"> 
-                    <input type="checkbox" id="list-8" name="list-8" class="form-control-custom">
-                    <label for="list-8">Rack 8 : IP Address 192.168.1.9</label>
-                  </li>
-                </ul>-->
-                <li><a href="charts.html">{{var1}}</a></li>
-                <!--<li><a href="charts.html">Rack 2 : IP Address 192.168.1.3</a></li>
-                <li><a href="charts.html">Rack 3 : IP Address 192.168.1.4</a></li>
-                <li><a href="charts.html">Rack 4 : IP Address 192.168.1.5</a></li>
-                <li><a href="charts.html">Rack 5 : IP Address 192.168.1.6</a></li>
-                <li><a href="charts.html">Rack 6 : IP Address 192.168.1.7</a></li>
-                <li><a href="charts.html">Rack 7 : IP Address 192.168.1.8</a></li>
-                <li><a href="charts.html">Rack 8 : IP Address 192.168.1.9</a></li>
-                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
-                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
-                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
-                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>
-                <li><a href="charts.html">Rack 1 : IP Address 192.168.1.2</a></li>-->
+                <div id="new-updates" class="card updates recent-updated">
+                    <div id="updates-header" class="card-header d-flex justify-content-between align-items-center">
+                      <h2 class="h5 display"><a data-toggle="collapse" data-parent="#new-updates" href="#updates-box"
+                      aria-expanded="true" aria-controls="updates-box">Controller</a></h2>
+                      <a data-toggle="collapse" data-parent="#new-updates" href="#updates-box" aria-expanded="true"
+                      aria-controls="updates-box"><i class="fa fa-angle-down"></i></a>
+                    </div>
+                    <div id="updates-box" role="tabpanel" class="collapse">
+                        <!-- Item-->
+                        {% for i in var %}
+                            <li><a href="rack_detail.html">{{ i }}</a></li>
+                        {% endfor %}
+                    </div>
+              </div>
 
               </div>
             </div>
+
+            <div class="col-xl-1 col-md-6"></div>
+
             <!-- Pie Chart-->
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-4 col-md-6">
               <div class="card project-progress">
-                <h2 class="display h4">Types</h2>
+                <h2 class="display h4">Type of all devices</h2>
                 <!--<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
                 <div class="pie-chart">
                   <canvas id="pieChart" width="300" height="300"> </canvas>
@@ -218,75 +88,5 @@
             </div>
           </div>
         </div>
-      </section>
-      <!-- Statistics Section-->
-      <section class="statistics">
-        <div class="container-fluid">
-          <div class="row d-flex">
-            <div class="col-lg-4">
-              <!-- Income-->
-              <div class="card income text-center">
-                <div class="icon"><i class="icon-line-chart"></i></div>
-                <div class="number">126,418</div><strong class="text-primary">All Income</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <!-- Monthly Usage-->
-              <div class="card data-usage">
-                <h2 class="display h4">Monthly Usage</h2>
-                <div class="row d-flex align-items-center">
-                  <div class="col-sm-6">
-                    <div id="progress-circle" class="d-flex align-items-center justify-content-center"></div>
-                  </div>
-                  <div class="col-sm-6"><strong class="text-primary">80.56 Gb</strong><small>Current Plan</small><span>100 Gb Monthly</span></div>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <!-- User Actibity-->
-              <div class="card user-activity">
-                <h2 class="display h4">User Activity</h2>
-                <div class="number">210</div>
-                <h3 class="h4 display">Social Users</h3>
-                <div class="progress">
-                  <div role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar progress-bar bg-primary"></div>
-                </div>
-                <div class="page-statistics d-flex justify-content-between">
-                  <div class="page-statistics-left"><span>Pages Visits</span><strong>230</strong></div>
-                  <div class="page-statistics-right"><span>New Visits</span><strong>73.4%</strong></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <footer class="main-footer">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-sm-6">
-              <p>Advanced Information Technology PCL. &copy; 2017-2019</p>
-            </div>
-            <div class="col-sm-6 text-right">
-              <p>Design by <a href="https://bootstrapious.com" class="external">Bootstrapious</a></p>
-              <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
-            </div>
-          </div>
-        </div>
-      </footer>
-    </div>
-    <!-- Javascript files-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper.js/umd/popper.min.js"> </script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
-    <script src="vendor/jquery.cookie/jquery.cookie.js"> </script>
-    <script src="vendor/chart.js/Chart.min.js"></script>
-    <script src="vendor/jquery-validation/jquery.validate.min.js"></script>
-    <script src="vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/charts-home.js"></script>
-    <!-- Main File-->
-    <script src="js/front.js"></script>
-  </body>
-</html>
+    </section>
+    {% endblock %}
