Update html page
Update html page, pie chart in index.html and rack_detail.html.

--- a/website/Templates/base_template.html
+++ b/website/Templates/base_template.html
@@ -37,22 +37,22 @@
         <div class="sidenav-header d-flex align-items-center justify-content-center">
           <!-- User Info-->
           <div class="sidenav-header-inner text-center"><img src="/static/img/logo.png" alt="logo" class="img-fluid rounded-circle">
-            <h2 class="h5">AIT</h2>
+              <h2 class="h3"><strong>A</strong><strong class="text-primary">I</strong><strong class="text-primary">T</strong></h2>
           </div>
           <!-- Small Brand information, appears on minimized sidebar-->
-          <div class="sidenav-header-logo"><a href="index" class="brand-small text-center"> <strong>A</strong><strong class="text-primary">IT</strong></a></div>
+          <div class="sidenav-header-logo"><a href="/index" class="brand-small text-center"> <strong>A</strong><strong class="text-primary">IT</strong></a></div>
         </div>
         <!-- Sidebar Navigation Menus-->
         <div class="main-menu">
           <h5 class="sidenav-heading">Main</h5>
             <ul id="side-main-menu" class="side-menu list-unstyled">
-                <li class="{% block active %}{% endblock %}"><a href="/SNCS/index"> <i class="icon-home"></i>Home</a></li>
+                <li class="{% block active %}{% endblock %}"><a href="/index"><i class="icon-home"></i>Home</a></li>
             </ul>
           <h5 class="sidenav-heading">Management</h5>
             <ul id="side-main-menu" class="side-menu list-unstyled ">
-                <li class="{% block active2 %}{% endblock %}"><a href="/SNCS/d1config/0"> <i class="icon-form"></i>Day 1 Configuration</a></li>
-                <li class="{% block active3 %}{% endblock %}"><a href="/SNCS/template_file"> <i class="icon-list"></i>Template file</a></li>
-                <li class="{% block active4 %}{% endblock %}"><a href="/SNCS/commandLine"> <i class="icon-screen"></i>Command line</a></li>
+                <li class="{% block active2 %}{% endblock %}"><a href="/d1config/0"> <i class="icon-form"></i>Configuration</a></li>
+                <li class="{% block active3 %}{% endblock %}"><a href="/template_file"> <i class="icon-list"></i>Template file</a></li>
+                <li class="{% block active4 %}{% endblock %}"><a href="/commandLine/0"> <i class="icon-screen"></i>Command line</a></li>
             </ul>
         </div>
       </div>
@@ -106,10 +106,10 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-6">
-              <p>Advanced Information Technology PCL. &copy; </p>
+              <p></p>
             </div>
             <div class="col-sm-6 text-right">
-              <p>Design by <a href="https://bootstrapious.com" class="external">Bootstrapious</a></p>
+              <p>Design by <a href="https://bootstrapious.com" class="external">Advanced Information Technology PCL. &copy; </a></p>
               <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
             </div>
           </div>
