--- a/website/Templates/node_detail.html
+++ b/website/Templates/node_detail.html
@@ -6,8 +6,8 @@
         <div class="breadcrumb-holder">
             <div class="container-fluid">
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/SNCS/index">Home</a></li>
-                    <li class="breadcrumb-item"><a href="/SNCS/rack_detail/{{ ip_rpi }}">Rack detail</a></li>
+                    <li class="breadcrumb-item"><a href="/index">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/rack_detail/{{ ip_rpi }}">Rack detail</a></li>
                     <li class="breadcrumb-item active">Node detail</li>
                 </ul>
             </div>
@@ -32,11 +32,15 @@
                         <tr></tr>
                         <tr>
                           <td>Node status</td>
-                          <td>Node is Up.</td>
+                          <td>Node is {{ det.status }}.</td>
+                        </tr>
+                        <tr>
+                          <td>Hostname</td>
+                          <td>{{ host }}</td>
                         </tr>
                         <tr>
                           <td>IP address</td>
-                          <td>100.10.1.10</td>
+                          <td>{{ det.ip }}</td>
                         </tr>
                         <tr>
                           <td>Serial number</td>
@@ -44,35 +48,35 @@
                         </tr>
                         <tr>
                           <td>Manufacturer</td>
-                          <td>Cisco</td>
+                          <td>{{ det.manufacturer }}</td>
+                        </tr>
+                        <tr>
+                          <td>Devices</td>
+                          <td>{{ dev }}</td>
                         </tr>
                         <tr>
                           <td>Model</td>
-                          <td>WS-C2960-24TC-L</td>
+                          <td>{{ mod }}</td>
                         </tr>
                         <tr>
                           <td>Device up time</td>
-                          <td>17 minutes</td>
+                          <td>{{ det.up_time }}</td>
                         </tr>
                         <tr>
                           <td>Interface using</td>
-                          <td>
-                            1 Virtual<br>
-                            24 FastEthernet<br>
-                            2 Gigabit Ethernet<br>
-                          </td>
+                          <td>{{ det.interface_using }}</td>
                         </tr>
                         <tr>
                           <td>Software version</td>
-                          <td>12.2(44)ES6</td>
+                          <td>{{ det.sw_version }}</td>
                         </tr>
                         <tr>
                           <td>Software image</td>
-                          <td>C2906-LANBASEK9-M</td>
+                          <td>{{ det.sw_image }}</td>
                         </tr>
                         <tr>
                           <td>Last reset from</td>
-                          <td>Power on.</td>
+                          <td>{{ det.last_reset }}</td>
                         </tr>
                       </tbody>
                     </table>
@@ -98,7 +102,7 @@
                         <tr>
                           <td>Fan</td>
                           <td>
-                              {% if fan == 'true' %}
+                              {% if fan == 'OK' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -108,7 +112,7 @@
                         <tr>
                           <td>Power Supply</td>
                           <td>
-                              {% if power == 'true' %}
+                              {% if power == 'OK' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -118,7 +122,7 @@
                         <tr>
                           <td>Temperature</td>
                           <td>
-                              {% if temp == 'true' %}
+                              {% if temp == 'OK' %}
                                 <img src="/static/img/green-button-md.png" alt="green-button" class="img-fluid rounded-circle" height="20" width="20">
                               {% else %}
                                 <img src="/static/img/red-button.jpg" alt="red-button" class="img-fluid rounded-circle" height="20" width="20">
@@ -140,8 +144,8 @@
                     <div class="card-body">
                         <div class="form-group row">
                           <div class="col-sm-4 offset-sm-4">
-                            <a href="/SNCS/d1config/{{ var1 }}"><button type="submit" class="btn btn-primary">Day 1 Configuration</button></a>
-                            <a href="commandLine"><button type="submit" class="btn btn-secondary">Command line</button></a>
+                            <a href="/d1config/{{ var1 }}"><button type="submit" class="btn btn-primary">Day 1 Configuration</button></a>
+                            <a href="/commandLine/{{ var1 }}"><button type="submit" class="btn btn-secondary">Command line</button></a>
                           </div>
                         </div>
                     </div>
