--- a/website/Templates/template_file.html
+++ b/website/Templates/template_file.html
@@ -23,63 +23,84 @@
             <h1 class="h3 display">Template file</h1>
           </header>
           <div class="container">
-              <button type="button" class="btn btn-success" data-toggle="collapse" data-target="#demo">New template file</button>
-              <div id="demo" class="collapse">
-                <div class="form-group">
-                  <div class="card">
-                    <div class="card-header d-flex align-items-center">
-                      <h4></h4>
-                    </div>
-                    <div class="card-body">
-                        <div class="form-group row">
-                          <label class="col-sm-2">Devices</label>
-                          <div class="col-md-3">
-                            <select name="account" class="form-control">
-                              <option>option 1</option>
-                              <option>option 2</option>
-                              <option>option 3</option>
-                              <option>option 4</option>
-                            </select>
-                          </div>
-                          <label class="col-sm-2">Model device</label>
-                          <div class="col-md-3">
-                            <select name="account" class="form-control">
-                              <option>option 1</option>
-                              <option>option 2</option>
-                              <option>option 3</option>
-                              <option>option 4</option>
-                            </select>
-                          </div>
-                        </div>
 
-                        <div class="line"></div>
-                        <div class="form-group row">
-                          <label class="col-sm-2 form-control-label">Description</label>
-                          <div class="col-md-9">
-                            <textarea id="text-area-2" class="form-control" rows="7" placeholder="Placeholder text."></textarea>
-                          </div>
-                        </div>
-                        <div class="line"></div>
-                        <div class="form-group row">
-                          <label class="col-sm-2 form-control-label">Choose file</label>
-                          <input type="file" name="myFile"><br><br>
-                        </div>
-                        <div class="line"></div>
-                        <div class="col-sm-4 offset-sm-5">
-                            <button type="submit" class="btn btn-blue">Add template file</button>
-                            <a href="index.html"><button type="submit" class="btn btn-secondary">Cancel</button></a>
-                        </div>
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div><br><br>
+          </div>
           <div class="row">
               <div class="col-lg-12">
               <div class="card">
                 <div class="card-header">
-                  <h4>File</h4>
+                  <h4>File
+                  <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-success float-right">New template file</button>
+                  <!-- Modal-->
+                  <div id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" class="modal fade text-left">
+                    <div role="document" class="modal-dialog modal-lg">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 id="exampleModalLabel" class="modal-title">New file</h5>
+                          <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
+                        </div>
+                        <div class="modal-body">
+                          <form action="" method="post" name="form1">
+                            <br>
+                              <div class="form-group row">
+                              <label class="col-auto">Devices</label>
+                                  <div class="col-md-4">
+                                    <select name="device" id="device" onChange="selected(this.selectedIndex)">
+                                      <option value="0" selected>Select device..</option>
+                                      {% for i in dev %}
+                                          <option value="{{ i.id }}">{{ i }}</option>
+                                      {% endfor %}
+                                    </select>
+                                  </div>
+                                  <label class="col-auto">Model</label>
+                                  <div class="col-md-4">
+                                    <select name="model" id="model">
+                                      <option value="0" selected>Select course..</option>
+                                    </select>
+                                  </div>
+                              </div>
+                              <div class="line"></div>
+                              <div class="form-group row">
+                                  <label class="col-auto">Description</label>
+                                  <div class="col-md-11">
+                                    <textarea id="text-area-2" class="form-control" rows="7" placeholder="Placeholder text."></textarea>
+                                  </div>
+                              </div>
+                              <div class="line"></div>
+                              <div class="form-group">
+                                  <label>Choose file</label>
+                                  <input type="file" name="myFile"><br><br>
+                              </div>
+                          </form>
+                        <script>
+                            var colleges=document.form1.device
+                            var models1=document.form1.model
+
+                            var model = new Array()
+
+                            {% autoescape off %}
+                                model = {{ model }}
+                            {% endautoescape %}
+
+                            function selected(collgrp){
+                                models1.options.length=0
+                                if(collgrp >= 0){
+
+                                    for(i=0; i<model[collgrp].length; i++){
+                                        models1.options[models1.options.length]=new Option(model[collgrp][i])
+                                    }
+                                }
+                            }
+                        </script>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-blue">Add template file</button>
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  </h4>
                 </div>
                 <div class="card-body">
                   <div class="table-responsive">
@@ -102,11 +123,10 @@
                           <th scope="row">1</th>
                           <td>basic config</td>
                           <td>29/8/61</td>
-                          <td>basic config for switch 2960 dscsdversdcccccccccccccccccccccccccccccc</td>
+                          <td>basic config for switch 2960 dscsdversdcccccccccccccccccc</td>
                           <td>switch</td>
                           <td>c2960</td>
-                          <td><a href="d1config.html"><button type="submit" class="btn btn-success">Download</button></a></td>
-                          <td><a href="d1config.html"><button type="submit" class="btn btn-blue">Upload</button></a></td>
+                          <td><a href="d1config.html"><button type="submit" class="btn btn-blue">Update</button></a></td>
                           <td><a href="d1config.html"><button type="submit" class="btn btn-danger">Delete</button></a></td>
                         </tr>
                         <tr>
@@ -116,8 +136,7 @@
                           <td>@fat</td>
                           <td>xxx</td>
                           <td></td>
-                          <td><a href="d1config.html"><button type="submit" class="btn btn-success">Download</button></a></td>
-                          <td><a href="d1config.html"><button type="submit" class="btn btn-blue">Upload</button></a></td>
+                          <td><a href="d1config.html"><button type="submit" class="btn btn-blue">Update</button></a></td>
                           <td><a href="d1config.html"><button type="submit" class="btn btn-danger">Delete</button></a></td>
                         </tr>
                         <tr>
@@ -127,8 +146,7 @@
                           <td>@twitter</td>
                           <td>xxx</td>
                           <td></td>
-                          <td><a href="d1config.html"><button type="submit" class="btn btn-success">Download</button></a></td>
-                          <td><a href="d1config.html"><button type="submit" class="btn btn-blue">Upload</button></a></td>
+                          <td><a href="d1config.html"><button type="submit" class="btn btn-blue">Update</button></a></td>
                           <td><a href="d1config.html"><button type="submit" class="btn btn-danger">Delete</button></a></td>
                         </tr>
                       </tbody>
